corgi/core/parser/peggy.ts
// Generated by peggy v. 2.0.1 (ts-pegjs plugin v. 2.1.0 )
//
// https://peggyjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface Role {
  role: string;
  seniors: string[];
}

export interface RuleHead {
  sign: boolean;
  role: string;
}

export interface RuleBodyElement {
  isSelf: boolean;
  isStrict: boolean;
  isRelative: boolean;
  role: string;
  n: number;
}

export interface Rule {
  head: RuleHead | null;
  type: "user-management" | "admin";
  body: RuleBodyElement[];
}

export interface Assignment {
  nominee: string;
  nomineeType: "address" | "parameter";
  role: string;
}

export interface OrgFile {
  header: Header;
  body: Body;
}

export interface Header {
  contractName: string;
  orgChartType: "std" | "dyn";
}

export interface Body {
  roles: Role[];
  rules: Rule[];
  init: Assignment[];
}

export namespace Body {
  export const empty = () =>
    ({ roles: [], rules: [], adminRules: [], init: [] } as Body);
  export const join = (a: Body, b: Body) => {
    if (!b) return a;
    return {
      roles: [...a.roles, ...b.roles],
      rules: [...a.rules, ...b.rules],
      init: [...a.init, ...b.init],
    } as Body;
  };
}

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
  source: string;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation =
  | ILiteralExpectation
  | IClassExpectation
  | IAnyExpectation
  | IEndExpectation
  | IOtherExpectation;

function peg$padEnd(str: string, targetLength: number, padString: string) {
  padString = padString || " ";
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g, '\\"')
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch));
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g, "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch));
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return '"' + literalEscape(expectation.text) + '"';
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) +
                  "-" +
                  classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return (
            descriptions.slice(0, -1).join(", ") +
            ", or " +
            descriptions[descriptions.length - 1]
          );
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? '"' + literalEscape(found1) + '"' : "end of input";
    }

    return (
      "Expected " +
      describeExpected(expected) +
      " but " +
      describeFound(found) +
      " found."
    );
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(
    message: string,
    expected: Expectation[],
    found: string | null,
    location: IFileRange
  ) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Object as any).setPrototypeOf === "function") {
      (Object as any).setPrototypeOf(this, SyntaxError.prototype);
    } else {
      (this as any).__proto__ = SyntaxError.prototype;
    }
    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }

  format(sources: { source: string; text: string }[]): string {
    let str = "Error: " + this.message;
    if (this.location) {
      let src: string[] | null = null;
      let k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].source === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      let s = this.location.start;
      let loc = this.location.source + ":" + s.line + ":" + s.column;
      if (src) {
        let e = this.location.end;
        let filler = peg$padEnd("", s.line.toString().length, " ");
        let line = src[s.line - 1];
        let last = s.line === e.line ? e.column : line.length + 1;
        str +=
          "\n --> " +
          loc +
          "\n" +
          filler +
          " |\n" +
          s.line +
          " | " +
          line +
          "\n" +
          filler +
          " | " +
          peg$padEnd("", s.column - 1, " ") +
          peg$padEnd("", last - s.column, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }
}

export interface ICached {
  nextPos: number;
  result: any;
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions: { [id: string]: any } = {
    orgFile: peg$parseorgFile,
  };
  let peg$startRuleFunction: () => any = peg$parseorgFile;

  const peg$c0 = function (header: any, body: any): any {
    return {
      header,
      body,
    } as OrgFile;
  };
  const peg$c1 = ":contract";
  const peg$c2 = peg$literalExpectation(":contract", false);
  const peg$c3 = "(";
  const peg$c4 = peg$literalExpectation("(", false);
  const peg$c5 = ")";
  const peg$c6 = peg$literalExpectation(")", false);
  const peg$c7 = function (contractName: any, orgChartType: any): any {
    return {
      contractName,
      orgChartType,
    } as Header;
  };
  const peg$c8 = /^[A-Z]/;
  const peg$c9 = peg$classExpectation([["A", "Z"]], false, false);
  const peg$c10 = /^[a-zA-Z0-9]/;
  const peg$c11 = peg$classExpectation(
    [
      ["a", "z"],
      ["A", "Z"],
      ["0", "9"],
    ],
    false,
    false
  );
  const peg$c12 = "std";
  const peg$c13 = peg$literalExpectation("std", false);
  const peg$c14 = "dyn";
  const peg$c15 = peg$literalExpectation("dyn", false);
  const peg$c16 = function (body: any, others: any): any {
    return Body.join(body, others);
  };
  const peg$c17 = ":role";
  const peg$c18 = peg$literalExpectation(":role", false);
  const peg$c19 = function (role: any, seniors: any): any {
    const body = Body.empty();
    body.roles.push({
      role,
      seniors: seniors ?? [],
    });
    return body;
  };
  const peg$c20 = ",";
  const peg$c21 = peg$literalExpectation(",", false);
  const peg$c22 = function (head: any, tail: any): any {
    return [head, ...tail];
  };
  const peg$c23 = "->";
  const peg$c24 = peg$literalExpectation("->", false);
  const peg$c25 = function (ruleBody: any, head: any): any {
    const body = Body.empty();
    body.rules.push({
      head,
      type: "user-management",
      body: ruleBody,
    });
    return body;
  };
  const peg$c26 = function (head: any, tail: any): any {
    return [head, ...tail];
  };
  const peg$c27 = "!";
  const peg$c28 = peg$literalExpectation("!", false);
  const peg$c29 = function (strict: any, role: any, quantity: any): any {
    const [isRelative, n] = quantity ?? [false, 1];
    return {
      isSelf: false,
      isStrict: strict === "!",
      isRelative,
      role,
      n,
    } as RuleBodyElement;
  };
  const peg$c30 = /^[0-9]/;
  const peg$c31 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c32 = "%";
  const peg$c33 = peg$literalExpectation("%", false);
  const peg$c34 = function (quantity: any): any {
    let isRelative = false;
    if (quantity.endsWith("%")) {
      isRelative = true;
      quantity = quantity.slice(0, -1);
    }
    return [isRelative, Number(quantity)];
  };
  const peg$c35 = "self";
  const peg$c36 = peg$literalExpectation("self", false);
  const peg$c37 = function (): any {
    return {
      isSelf: true,
      isStrict: true,
      isRelative: false,
      role: "self",
      n: 1,
    } as RuleBodyElement;
  };
  const peg$c38 = "-";
  const peg$c39 = peg$literalExpectation("-", false);
  const peg$c40 = function (sign: any, role: any): any {
    return {
      role,
      sign: sign === "-",
    };
  };
  const peg$c41 = ":init";
  const peg$c42 = peg$literalExpectation(":init", false);
  const peg$c43 = function (role: any, nominee: any): any {
    const body = Body.empty();
    body.init.push({
      nominee,
      nomineeType: nominee.startsWith("0x") ? "address" : "parameter",
      role,
    });
    return body;
  };
  const peg$c44 = ":admin-rule";
  const peg$c45 = peg$literalExpectation(":admin-rule", false);
  const peg$c46 = function (ruleBody: any): any {
    const body = Body.empty();
    body.rules.push({
      head: null,
      type: "admin",
      body: ruleBody,
    });
    return body;
  };
  const peg$c47 = /^[a-zA-Z]/;
  const peg$c48 = peg$classExpectation(
    [
      ["a", "z"],
      ["A", "Z"],
    ],
    false,
    false
  );
  const peg$c49 = "//";
  const peg$c50 = peg$literalExpectation("//", false);
  const peg$c51 = /^[^\n]/;
  const peg$c52 = peg$classExpectation(["\n"], true, false);
  const peg$c53 = "\n";
  const peg$c54 = peg$literalExpectation("\n", false);
  const peg$c55 = function (): any {
    return null;
  };
  const peg$c56 = "0x";
  const peg$c57 = peg$literalExpectation("0x", false);
  const peg$c58 = /^[0-9a-fA-F]/;
  const peg$c59 = peg$classExpectation(
    [
      ["0", "9"],
      ["a", "f"],
      ["A", "F"],
    ],
    false,
    false
  );
  const peg$c60 = "$";
  const peg$c61 = peg$literalExpectation("$", false);
  const peg$c62 = /^[ \t\r\n]/;
  const peg$c63 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);

  let peg$currPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  const peg$resultsCache: { [id: number]: ICached } = {};

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        "Can't start parsing from rule \"" + options.startRule + '".'
      );
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function peg$literalExpectation(
    text1: string,
    ignoreCase: boolean
  ): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(
    parts: IClassParts,
    inverted: boolean,
    ignoreCase: boolean
  ): IClassExpectation {
    return {
      type: "class",
      parts: parts,
      inverted: inverted,
      ignoreCase: ignoreCase,
    };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildStructuredError(
    expected1: Expectation[],
    found: string | null,
    location1: IFileRange
  ) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseorgFile(): any {
    let s0, s1, s2, s3, s4;

    const key = peg$currPos * 23 + 0;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_c();
    if ((s1 as any) !== peg$FAILED) {
      s2 = peg$parseheader();
      if ((s2 as any) !== peg$FAILED) {
        s3 = peg$parse_c();
        if ((s3 as any) !== peg$FAILED) {
          s4 = peg$parsebody();
          if ((s4 as any) !== peg$FAILED) {
            s1 = peg$c0(s2, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseheader(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 23 + 1;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 9) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 9;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c2);
      }
    }
    if ((s1 as any) !== peg$FAILED) {
      s2 = peg$parse__();
      if ((s2 as any) !== peg$FAILED) {
        s3 = peg$parsecontractName();
        if ((s3 as any) !== peg$FAILED) {
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 40) {
            s5 = peg$c3;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$c4);
            }
          }
          if ((s5 as any) !== peg$FAILED) {
            s6 = peg$parseorgChartType();
            if ((s6 as any) !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s7 = peg$c5;
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$c6);
                }
              }
              if ((s7 as any) !== peg$FAILED) {
                s4 = s6;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if ((s4 as any) !== peg$FAILED) {
            s1 = peg$c7(s3, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsecontractName(): any {
    let s0, s1, s2, s3, s4;

    const key = peg$currPos * 23 + 2;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (peg$c8.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c9);
      }
    }
    if ((s2 as any) !== peg$FAILED) {
      s3 = [];
      if (peg$c10.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c11);
        }
      }
      while ((s4 as any) !== peg$FAILED) {
        s3.push(s4);
        if (peg$c10.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$c11);
          }
        }
      }
      if ((s3 as any) !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if ((s1 as any) !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseorgChartType(): any {
    let s0;

    const key = peg$currPos * 23 + 3;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    if (input.substr(peg$currPos, 3) === peg$c12) {
      s0 = peg$c12;
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c13);
      }
    }
    if ((s0 as any) === peg$FAILED) {
      if (input.substr(peg$currPos, 3) === peg$c14) {
        s0 = peg$c14;
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c15);
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsebody(): any {
    let s0, s1, s2, s3, s4;

    const key = peg$currPos * 23 + 4;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_c();
    if ((s1 as any) !== peg$FAILED) {
      s2 = peg$parseroleLine();
      if ((s2 as any) === peg$FAILED) {
        s2 = peg$parseruleLine();
        if ((s2 as any) === peg$FAILED) {
          s2 = peg$parseinitLine();
          if ((s2 as any) === peg$FAILED) {
            s2 = peg$parseadminLine();
          }
        }
      }
      if ((s2 as any) !== peg$FAILED) {
        s3 = peg$parse_c();
        if ((s3 as any) !== peg$FAILED) {
          s4 = peg$parsebody();
          if ((s4 as any) === peg$FAILED) {
            s4 = null;
          }
          if ((s4 as any) !== peg$FAILED) {
            s1 = peg$c16(s2, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseroleLine(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    const key = peg$currPos * 23 + 5;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c17) {
      s1 = peg$c17;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c18);
      }
    }
    if ((s1 as any) !== peg$FAILED) {
      s2 = peg$parse__();
      if ((s2 as any) !== peg$FAILED) {
        s3 = peg$parserole();
        if ((s3 as any) !== peg$FAILED) {
          s4 = peg$parse_();
          if ((s4 as any) !== peg$FAILED) {
            s5 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 40) {
              s6 = peg$c3;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$c4);
              }
            }
            if ((s6 as any) !== peg$FAILED) {
              s7 = peg$parse_();
              if ((s7 as any) !== peg$FAILED) {
                s8 = peg$parseseniors();
                if ((s8 as any) !== peg$FAILED) {
                  s9 = peg$parse_();
                  if ((s9 as any) !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s10 = peg$c5;
                      peg$currPos++;
                    } else {
                      s10 = peg$FAILED;
                      if (peg$silentFails === 0) {
                        peg$fail(peg$c6);
                      }
                    }
                    if ((s10 as any) !== peg$FAILED) {
                      s5 = s8;
                    } else {
                      peg$currPos = s5;
                      s5 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if ((s5 as any) === peg$FAILED) {
              s5 = null;
            }
            if ((s5 as any) !== peg$FAILED) {
              s1 = peg$c19(s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseseniors(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 23 + 6;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parserole();
    if ((s1 as any) !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if ((s4 as any) !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c20;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$c21);
          }
        }
        if ((s5 as any) !== peg$FAILED) {
          s6 = peg$parse_();
          if ((s6 as any) !== peg$FAILED) {
            s7 = peg$parserole();
            if ((s7 as any) !== peg$FAILED) {
              s3 = s7;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while ((s3 as any) !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if ((s4 as any) !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c20;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$c21);
            }
          }
          if ((s5 as any) !== peg$FAILED) {
            s6 = peg$parse_();
            if ((s6 as any) !== peg$FAILED) {
              s7 = peg$parserole();
              if ((s7 as any) !== peg$FAILED) {
                s3 = s7;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if ((s2 as any) !== peg$FAILED) {
        s1 = peg$c22(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseruleLine(): any {
    let s0, s1, s2, s3, s4, s5;

    const key = peg$currPos * 23 + 7;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseruleBody();
    if ((s1 as any) !== peg$FAILED) {
      s2 = peg$parse_();
      if ((s2 as any) !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c23) {
          s3 = peg$c23;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$c24);
          }
        }
        if ((s3 as any) !== peg$FAILED) {
          s4 = peg$parse_();
          if ((s4 as any) !== peg$FAILED) {
            s5 = peg$parseruleHead();
            if ((s5 as any) !== peg$FAILED) {
              s1 = peg$c25(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseruleBody(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 23 + 8;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
